--- a/style.css
+++ b/style.css
@@ -8,7 +8,9 @@
 * {
   margin: 0;
   padding: 0;
+  text-align: center;
 }
+
 body {
   font-family: "Balsamiq Sans", sans-serif;
   background-color: #ffffff;
